2003-03-15  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-display-records-1): erase buffer when
	appending, since we are redisplaying the records, not just one
	(with-output-to-temp-buffer was doing that before ...) 
	(bbdb-multiple-buffers-default): Default/example function for *BBDB*
	buffer name generation for Gnus, VM, and compositions.
	(bbdb-pop-up-bbdb-buffer): code move to bbdb-multiple-buffers-default

2003-03-13  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-gnus.el:
	* lisp/bbdb-hooks.el:
	* lisp/bbdb.el: Droped support for GNUS versions <= 3.14

	* lisp/bbdb-hooks.el (bbdb-header-start): There is no
	gnus-subject-mode, its called gnus-summary-mode.

	* lisp/bbdb.el (bbdb-display-records-1): removed call to
	bbdb-pop-up-bbdb-buffer to avoid problems with special-display-*,
	still we are not back to the old behavior, i.e. if calling BBDB
	from an frame without *BBDB* buffer while other frames are
	displaying it we will not get it on the current frame, but that is
	how it used to be. 

2003-03-11  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-frob-mode-line): show the BBDB buffer name.

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-show-all-recipients):
	Throwing away old code and use bbdb/gnus-update-records now.
	(bbdb/gnus-update-records): Do not toggle headers to gain access
	to the hidden headers, since gnus-fetch-field is doing this for us.

2003-03-10  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-multiple-buffers): Yet another new variable.
	Enables the creation of multiple *BBDB* buffers.  
	(bbdb-pop-up-bbdb-buffer): if bbdb-multiple-buffers is enabled
	created new *BBDB: <BUFNAME>* buffer and set it up correctly.

2003-03-07  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-gnus.el (bbdb/gnus-update-records): use
	gnus-fetch-field instead of mail-fetch-field.  Fixes problems
	reported by Klaus Zeitler.

	* lisp/bbdb.el (bbdb-display-records-1): Do not use the function