@@ -20,7 +20,7 @@
 ;;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
 ;;
-;; $Id: bbdb-com.el,v 1.160 2003/03/07 22:12:10 fenk Exp $
+;; $Id: bbdb-com.el,v 1.161 2003/03/27 21:18:42 fenk Exp $
 ;;
 
 (require 'bbdb)
@@ -2727,7 +2727,8 @@ of all of those people."
   (mail-abbrev-expand-hook)
 
   (when bbdb-completion-display-record
-    (bbdb-pop-up-bbdb-buffer bbdb-use-pop-up)
+    (if bbdb-use-pop-up
+        (bbdb-pop-up-bbdb-buffer))
     (let ((bbdb-gag-messages t))
       (bbdb-display-records-1
        (mapcar (lambda (x) (bbdb-search-simple nil x)) records)
