@@ -1,3 +1,8 @@
+2003-03-27  Robert Fenk  <Robert.Fenk@gmx.de>
+
+	* lisp/bbdb-com.el (bbdb-mail-abbrev-expand-hook): save-excursion
+	to avoid getting into the *BBDB* buffer accidently.
+
 2003-03-15  Robert Fenk  <Robert.Fenk@gmx.de>
 
 	* lisp/bbdb.el (bbdb-display-records-1): erase buffer when
